[workspace]
resolver = "2"

members = [
  "tuplities",
  "tuplities-clone",
  "tuplities-copy",
  "tuplities-debug",
  "tuplities-default",
  "tuplities-eq",
  "tuplities-hash",
  "tuplities-mut",
  "tuplities-option",
  "tuplities-ord",
  "tuplities-partial-eq",
  "tuplities-partial-ord",
  "tuplities-remove",
  "tuplities-insert",
  "tuplities-len",
  "tuplities-index",
  "tuplities-pop-front",
  "tuplities-pop-back",
  "tuplities-push-front",
  "tuplities-push-back",
  "tuplities-ref",
  "tuplities-derive",
]

[workspace.dependencies]
tuplities-clone = { path = "tuplities-clone" }
tuplities-copy = { path = "tuplities-copy" }
tuplities-debug = { path = "tuplities-debug" }
tuplities-default = { path = "tuplities-default" }
tuplities-eq = { path = "tuplities-eq" }
tuplities-hash = { path = "tuplities-hash" }
tuplities-mut = { path = "tuplities-mut" }
tuplities-option = { path = "tuplities-option" }
tuplities-ord = { path = "tuplities-ord" }
tuplities-partial-eq = { path = "tuplities-partial-eq" }
tuplities-partial-ord = { path = "tuplities-partial-ord" }
tuplities-remove = { path = "tuplities-remove" }
tuplities-insert = { path = "tuplities-insert" }
tuplities-len = { path = "tuplities-len" }
tuplities-index = { path = "tuplities-index" }
tuplities-pop-front = { path = "tuplities-pop-front" }
tuplities-pop-back = { path = "tuplities-pop-back" }
tuplities-push-front = { path = "tuplities-push-front" }
tuplities-push-back = { path = "tuplities-push-back" }
tuplities-ref = { path = "tuplities-ref" }
tuplities-derive = { path = "tuplities-derive" }
siphasher = { version = "1" }
typenum = { version = "1" }

[workspace.lints.rust]
missing_docs = "forbid"
unused_macro_rules = "forbid"
unconditional_recursion = "forbid"
unreachable_patterns = "forbid"
unused_import_braces = "forbid"
unused_must_use = "forbid"
deprecated = "deny"

[workspace.lints.clippy]
unreadable_literal = "allow"
missing_panics_doc = "allow"
new_ret_no_self = "allow"
struct_excessive_bools = "allow"
should_panic_without_expect = "allow"
doc_markdown = "allow"
unnecessary_cast = "forbid"
unused_unit = "allow"
redundant_clone = "forbid"
clone_on_copy = "forbid"
pedantic = { level = "deny", priority = -1 }
